...
                app:tint="@color/white"
                tools:layout_editor_absoluteX="371dp"
                tools:layout_editor_absoluteY="12dp" />
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/change_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/post_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/create_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="Create Post"
            android:src="@drawable/ic_pencil"
            app:layout_constraintBottom_toBottomOf="parent"
...
